--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -359,9 +359,9 @@ Version: 1.0;
 }
 .main-menu-area {
 	background: #363f4d;
-	padding: 0 30px;
-	border-radius: 30px 30px 0 0;
+    border-radius: 30px 30px 0 0;
     position: relative;
+    padding: 20px 30px 0;
 }
 .main-menu > li {
 	display: inline-block;
@@ -373,7 +373,7 @@ Version: 1.0;
 	color: #fff;
 	font-weight: 500;
 	display: block;
-	padding: 20px 20px;
+    padding: 0px 20px 20px;
 }
 .main-menu > li:first-child > a{
     /*padding-left: 0;*/
